<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/maps"
        android:title=""
        android:contentDescription="@string/maps_page"
        android:icon="@drawable/round_map_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settings"
        android:title=""
        android:contentDescription="@string/settings_title"
        android:icon="@drawable/baseline_settings_24"
        android:iconTint="@color/white"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/language"
                android:title="@string/language"/>
            <item android:id="@+id/logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>